; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_addReplyLoadedModules.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_addReplyLoadedModules.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RedisModule = type { i32 }

@modules = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"ver\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @addReplyLoadedModules(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.RedisModule*, align 8
  store i32* %0, i32** %2, align 8
  %7 = load i32, i32* @modules, align 4
  %8 = call i32* @dictGetIterator(i32 %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @modules, align 4
  %11 = call i32 @dictSize(i32 %10)
  %12 = call i32 @addReplyArrayLen(i32* %9, i32 %11)
  br label %13

13:                                               ; preds = %17, %1
  %14 = load i32*, i32** %3, align 8
  %15 = call i32* @dictNext(i32* %14)
  store i32* %15, i32** %4, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %38

17:                                               ; preds = %13
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @dictGetKey(i32* %18)
  store i32 %19, i32* %5, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = call %struct.RedisModule* @dictGetVal(i32* %20)
  store %struct.RedisModule* %21, %struct.RedisModule** %6, align 8
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @addReplyMapLen(i32* %22, i32 2)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @addReplyBulkCString(i32* %24, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %26 = load i32*, i32** %2, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @sdslen(i32 %28)
  %30 = call i32 @addReplyBulkCBuffer(i32* %26, i32 %27, i32 %29)
  %31 = load i32*, i32** %2, align 8
  %32 = call i32 @addReplyBulkCString(i32* %31, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %33 = load i32*, i32** %2, align 8
  %34 = load %struct.RedisModule*, %struct.RedisModule** %6, align 8
  %35 = getelementptr inbounds %struct.RedisModule, %struct.RedisModule* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @addReplyLongLong(i32* %33, i32 %36)
  br label %13

38:                                               ; preds = %13
  %39 = load i32*, i32** %3, align 8
  %40 = call i32 @dictReleaseIterator(i32* %39)
  ret void
}

declare dso_local i32* @dictGetIterator(i32) #1

declare dso_local i32 @addReplyArrayLen(i32*, i32) #1

declare dso_local i32 @dictSize(i32) #1

declare dso_local i32* @dictNext(i32*) #1

declare dso_local i32 @dictGetKey(i32*) #1

declare dso_local %struct.RedisModule* @dictGetVal(i32*) #1

declare dso_local i32 @addReplyMapLen(i32*, i32) #1

declare dso_local i32 @addReplyBulkCString(i32*, i8*) #1

declare dso_local i32 @addReplyBulkCBuffer(i32*, i32, i32) #1

declare dso_local i32 @sdslen(i32) #1

declare dso_local i32 @addReplyLongLong(i32*, i32) #1

declare dso_local i32 @dictReleaseIterator(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
